--- a/pom.xml
+++ b/pom.xml
@@ -3,22 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>katas</groupId>
     <artifactId>katas</artifactId>
     <version>1.0</version>
-
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit-dep</artifactId>
-            <version>4.8.2</version>
+            <version>4.10</version>
         </dependency>
         <dependency>
-            <groupId>hamcrest</groupId>
+            <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
-            <version>1.2</version>
+            <version>1.1</version>
         </dependency>
     </dependencies>
-
 </project>
